--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,23 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Mama</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+<!doctype html>  
+<html lang="en">  
+  
+<head>  
+  <meta charset="utf-8">  
+  <title>RemitEx</title>  
+  <base href="/">  
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <link rel="icon" type="image/x-icon" href="favicon.ico"> 
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+</head>  
+<style type="text/css">
+.remit-clickable {
+  cursor: pointer;
+}
+ 
+</style>
+<body>  
+  
+    <app-root></app-root> 
+   
+</body>  
+</html>  
